--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
 url: "https://BicMak.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: BicMak # change to your github username
 
 twitter:
   username: twitter_username # change to your twitter username
